[tool.poetry]
name = "scraper-template"
version = "0.1.0"
description = ""
authors = ["Mikedreyeu <mikedreyeu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
